server.py ... every record from select_all ... apply str(record)

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -28,7 +28,8 @@
                //var data = google.visualization.arrayToDataTable([
                var data_table = new google.visualization.DataTable();
                
-               data_table.addColumn('datetime', 'Time');
+               //data_table.addColumn('datetime', 'Time');
+               data_table.addColumn('text', 'Time');
                //data_table.addColumn('number', 'Temperature');
                data_table.addColumn('number', 'Power-Consumption');
 
