--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -29,7 +29,7 @@
                var data_table = new google.visualization.DataTable();
                
                //data_table.addColumn('datetime', 'Time');
-               data_table.addColumn('text', 'Time');
+               data_table.addColumn('string', 'Time');
                //data_table.addColumn('number', 'Temperature');
                data_table.addColumn('number', 'Power-Consumption');
 
