removed curveType in drawLine options ... why negative values ?

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -134,7 +134,7 @@
 
                 var options = {
                    title: 'Hot-Air AC Temperature Variation',
-                   curveType: 'function',
+                   //curveType: 'function',
                    legend: {position: 'bottom'},
                    explorer: {
                        actions: ['dragToZoom', 'rightClickToReset'],
