lineDraw/ Time axes changed from string to datetime

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -28,7 +28,7 @@
                //var data = google.visualization.arrayToDataTable([
                var data_table = new google.visualization.DataTable();
                
-               //data_table.addColumn('datetime', 'Time');
+               //data_table.addColumn('string', 'Time');
                data_table.addColumn('datetime', 'Time');
                //data_table.addColumn('number', 'Temperature');
                data_table.addColumn('number', 'Power-Consumption');
@@ -120,7 +120,7 @@
                    //console.log( "Month is ..." + my_month );
                    //console.log( "Day is ..." + my_day );
 
-                   //console.log( "Time String is ..." + my_time_str);
+                   console.log( "Full Datetime Offset is ..." + full_datetime_offset);
 
                    //console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
                     //    ", Hours=" + my_hours + ", Minutes=" + my_minutes + ", Seconds=" + my_seconds);
