--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -86,6 +86,8 @@
                //var records_first_0 = iot_data_records[0];
                others_array = more_records.split(";")
 
+               console.log("Other Records Array Size = " + others_array.length)
+
                for (var i = 0; i < others_array.length; i++) {
                    record_i = others_array[i];
 
@@ -120,7 +122,7 @@
                    //console.log( "Month is ..." + my_month );
                    //console.log( "Day is ..." + my_day );
 
-                   console.log( "Full Datetime Offset is ..." + full_datetime_offset);
+                   console.log("Full Datetime Offset is ... ( " + (i+1) + " ) " + full_datetime_offset);
 
                    //console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
                     //    ", Hours=" + my_hours + ", Minutes=" + my_minutes + ", Seconds=" + my_seconds);
