lineDraw/ Time axes changed from string to datetime

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -122,7 +122,7 @@
                    //console.log( "Month is ..." + my_month );
                    //console.log( "Day is ..." + my_day );
 
-                   console.log("Full Datetime Offset is ... ( " + (i+1) + " ) " + full_datetime_offset);
+                   console.log("Full Datetime Offset is ... ( " + (i+1) + " ) " + full_datetime_offset + " / " + Number( values[2] ));
 
                    //console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
                     //    ", Hours=" + my_hours + ", Minutes=" + my_minutes + ", Seconds=" + my_seconds);
