lineDraw/ Time axes changed from string to datetime

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -163,7 +163,7 @@
         <![endif]-->
         
         <p>
-            Number of Hot-Air AC Temperature Records Found: {{ all_records.length }}
+            Number of Hot-Air AC Temperature Records Found: 199
         </p>
 
         <div id="curve_chart" style="width: 900px; height: 500px"></div>
