new Date() ... trying the RFC datetime string as argument

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -131,7 +131,7 @@
                    //    continue;
                    //}
 
-                   full_datetime_offset = "2014";
+                   full_datetime_offset = "2014-12-06T10:30:00-0800";
 
                    data_table.addRow( 
                        //[ new Date(my_year, my_month, my_day, my_hours, my_minutes, my_seconds, 0.0), Number(values[2]) ] );
