--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -12,7 +12,6 @@
         <link rel="stylesheet" href="">
 
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script type="text/javascript" src="date.js"></script>
 
         <script type="text/javascript">
            google.charts.load('current', {'packages': ['corechart']});
@@ -125,7 +124,7 @@
                    //console.log( "Day is ..." + my_day );
 
                    console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
-                   console.log( ".... " + Date.parse(full_datetime) );
+                   console.log( ".... " + Date.parse(full_datetime.trim()) );
 
                    //console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
                     //    ", Hours=" + my_hours + ", Minutes=" + my_minutes + ", Seconds=" + my_seconds);
@@ -166,7 +165,7 @@
         <![endif]-->
         
         <p>
-            Number of Hot-Air AC Temperature Records Found: {{more_records}}.length
+            Number of Hot-Air AC Temperature Records Found:
         </p>
 
         <div id="curve_chart" style="width: 900px; height: 500px"></div>
