drawLine add format in xAxis

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -145,6 +145,11 @@
 
                 var options = {
                    title: 'Hot-Air AC Temperature Variation',
+                   width: 900,
+                   height: 500,
+                   hAxis: {
+                       format: 'M/d/yy'
+                   },
                    //curveType: 'function',
                    legend: {position: 'bottom'},
                    explorer: {
