drawLine add format in xAxis

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -150,6 +150,7 @@
                    hAxis: {
                        format: 'M/d/yy'
                    },
+                   is3D: true,
                    //curveType: 'function',
                    legend: {position: 'bottom'},
                    explorer: {
