format drawLine ... pointSize

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -150,7 +150,7 @@
                    hAxis: {
                        format: 'M/d/yy'
                    },
-                   is3D: true,
+                   pointSize: 20,
                    //curveType: 'function',
                    legend: {position: 'bottom'},
                    explorer: {
