format drawLine ... many

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -145,10 +145,10 @@
 
                 var options = {
                    title: 'Hot-Air AC Temperature Variation',
-                   width: 900,
-                   height: 500,
+                   width: 1600,
+                   height: 800,
                    hAxis: {
-                       format: 'M/d/yy'
+                       format: 'MM/dd/yy'
                    },
                    pointSize: 2,
                    //curveType: 'function',
