format drawLine ... many

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -148,7 +148,8 @@
                    width: 1600,
                    height: 800,
                    hAxis: {
-                       format: 'MM/dd/yy'
+                       format: 'MM/dd/yy',
+                       direction: -1
                    },
                    pointSize: 2,
                    //curveType: 'function',
