format drawLine ... many

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -149,7 +149,9 @@
                    height: 800,
                    hAxis: {
                        format: 'MM/dd/yy',
-                       direction: -1
+                       direction: -1,
+                       slantedText: true,
+                       slantedTextAngle: 90
                    },
                    pointSize: 2,
                    //curveType: 'function',
