--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -148,7 +148,7 @@
                    width: 1600,
                    height: 800,
                    hAxis: {
-                       format: 'MM/dd/yy',
+                       format: 'MM/dd/yy hh:mm:ss',
                        //direction: -1,
                        slantedText: true,
                        slantedTextAngle: 45
