--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -178,11 +178,14 @@
         <![endif]-->
         
         <p>
-            Number of Hot-Air AC Temperature Records Found:
+            Number of Hot Air AC Temperature Records Found:
         </p>
-
-        <div id="line-chart-temp" style="width: 90px; height: 50px"></div>
-        <div id="curve_chart" style="width: 900px; height: 500px"></div>
+        <div id="curve-chart-temperature" style="width: 900px; height: 500px"></div>
+        
+        <p>
+            Number of AC Power Consumption Records Found:
+        </p>
+        <div id="curve-chart-power" style="width: 900px; height: 500px"></div>
 
         <script src="" async defer></script>
     </body>
