display length_temperature & length_power

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -178,12 +178,12 @@
         <![endif]-->
         
         <p>
-            Number of Hot Air AC Temperature Records Found:
+            Number of Hot Air AC Temperature Records Found: {{length_temperature}}
         </p>
         <div id="curve-chart-temperature" style="width: 900px; height: 500px"></div>
         
         <p>
-            Number of AC Power Consumption Records Found:
+            Number of AC Power Consumption Records Found: {{length_power}}
         </p>
         <div id="curve-chart-power" style="width: 900px; height: 500px"></div>
 
