--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -165,7 +165,7 @@
                };
 
                var chart = new google.visualization.LineChart(
-                   document.getElementById('curve_chart')
+                   document.getElementById('curve-chart-power')
                );
 
                chart.draw(data_table, options);
