--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -109,7 +109,7 @@
                    document.getElementById('curve-chart-power')
                );
 
-               chart.draw(data_table, options);
+               chart.draw(data_table_hot, options);
 
                var more_records = '{{ more_records }}';
 
