two graphs for temperature & power

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -111,6 +111,9 @@
 
                chart.draw(data_table_hot, options);
 
+               // ******* Second Graph ********
+               // *****************************
+
                var more_records = '{{ more_records }}';
 
                //var records_first_0 = iot_data_records[0];
