two graphs for temperature & power

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -114,6 +114,8 @@
                // ******* Second Graph ********
                // *****************************
 
+               var data_table = new google.visualization.DataTable();
+               
                var more_records = '{{ more_records }}';
 
                //var records_first_0 = iot_data_records[0];
@@ -159,7 +161,7 @@
                    //console.log( "Month is ..." + my_month );
                    //console.log( "Day is ..." + my_day );
 
-                   console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
+                   //console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
                    //console.log( ".... " + Date.parse(full_datetime.trim()) );
 
                    //console.log( "Full Date Time: Year=" + my_year + ", Month=" + my_month + ", Day=" + my_day + 
