two graphs for temperature & power

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -79,8 +79,8 @@
                    //    continue;
                    //}
 
-                   data_table_hot.addRow( 
-                       [new Date(full_datetime_offset), Number(values[2])] );
+                   //data_table_hot.addRow( 
+                       //[new Date(full_datetime_offset), Number(values[2])] );
                        //[full_datetime, Number(values[2])] );
                }
 
