--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -79,8 +79,8 @@
                    //    continue;
                    //}
 
-                   data_table_hot.addRow( 
-                       [new Date(full_datetime_offset), Number(values[2])] );
+                   //data_table_hot.addRow( 
+                   //    [new Date(full_datetime_offset), Number(values[2])] );
                        //[full_datetime, Number(values[2])] );
                }
 
@@ -109,7 +109,7 @@
                    document.getElementById('curve-chart-temperature')
                );
 
-               chart_hot.draw(data_table_hot, options_hot);
+               //chart_hot.draw(data_table_hot, options_hot);
 
                // ******* Second Graph ********
                // *****************************
