removed width and height in graph options

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -86,8 +86,8 @@
 
                var options_hot = {
                    title: 'Hot-Air AC Temperature Variation',
-                   width: 900,
-                   height: 500,
+                   //width: 900,
+                   //height: 500,
                    hAxis: {
                        format: 'MM/dd/yy hh:mm:ss',
                        //direction: -1,
@@ -180,8 +180,8 @@
 
                 var options = {
                    title: 'AC Power Consumption',
-                   width: 900,
-                   height: 500,
+                   //width: 900,
+                   //height: 500,
                    hAxis: {
                        format: 'MM/dd/yy hh:mm:ss',
                        //direction: -1,
