print datetime and temperature

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -48,6 +48,9 @@
 
                    full_datetime_offset = full_datetime.concat("-0000");
                    
+                   console.log("Full Datetime Offset is ... (" + (i+1) + ")" + full_datetime_offset + "/ " + Number( values[2] ));
+                   console.log( ".... " + Date.parse(full_datetime.trim()) );
+
                    //my_datetime = full_datetime.split("T");
 
                    //my_date_str = my_datetime[0];
