--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -225,6 +225,16 @@
         </p>
         <div id="curve-chart-power" style="width: 900px; height: 500px"></div>
 
+        <p>
+            Visual Indicators for Tasmota Sensors Status in VLAB3 
+        </p>
+        <div id="status-visual-indicators" style="width: 900px; height: 500px"></div>
+
+        <p>
+            Area Graphs for Line and UPS Power
+        </p>
+        <div id="ups-line-power" style="width: 900px; height: 500px"></div>
+        
         <script src="" async defer></script>
     </body>
 </html>
