bold and underlined headers for div

--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -226,15 +226,15 @@
         <div id="curve-chart-power" style="width: 900px; height: 500px"></div>
 
         <p>
-            Visual Indicators for Tasmota Sensors Status in VLAB3 
+            <strong><u>Visual Indicators for Tasmota Sensors Status in VLAB3</u></strong> 
         </p>
         <div id="status-visual-indicators" style="width: 900px; height: 500px"></div>
 
         <p>
-            Area Graphs for Line and UPS Power
+            <strong><u>Area Graphs for Line and UPS Power COntribution to Total</u></strong>
         </p>
         <div id="ups-line-power" style="width: 900px; height: 500px"></div>
-        
+
         <script src="" async defer></script>
     </body>
 </html>
