--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -228,10 +228,18 @@
         <p>
             <strong><u>Visual Indicators for Tasmota Sensors Status in VLAB3</u></strong> 
         </p>
-        <div id="status-visual-indicators" style="width: 900px; height: 500px"></div>
+        <div id="status-visual-indicators" style="width: 900px; height: 500px">
+            <table style="width:100%, height:100%">
+                <tr>
+                    <th>Sensor</th>
+                    <th>Sensor</th>
+                    <th>Sensor</th>
+                </tr>
+            </table>
+        </div>
 
         <p>
-            <strong><u>Area Graphs for Line and UPS Power COntribution to Total</u></strong>
+            <strong><u>Area Graphs for Line and UPS Power Contribution to Total</u></strong>
         </p>
         <div id="ups-line-power" style="width: 900px; height: 500px"></div>
 
