--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -229,7 +229,7 @@
             <strong><u>Visual Indicators for Tasmota Sensors Status in VLAB3</u></strong> 
         </p>
         <div id="status-visual-indicators" style="width: 900px; height: 500px">
-            <table style="width:100%, height:100%">
+            <table style="width:100%; height:100%">
                 <tr>
                     <th>Sensor</th>
                     <th>Sensor</th>
