--- a/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
+++ b/vibm/nomads/nomads/templates/hot_air_AC_temperature_graph.html
@@ -231,9 +231,16 @@
         <div id="status-visual-indicators" style="width: 900px; height: 500px">
             <table style="width:100%; height:100%">
                 <tr>
-                    <th>Sensor</th>
-                    <th>Sensor</th>
-                    <th>Sensor</th>
+                    <th>Sensor 1</th>
+                    <th>Sensor 2</th>
+                    <th>Sensor 3</th>
+                </tr>
+                <tr>
+                    <th>
+                        <button id="sensor-1-status" style="text-align: center; background-color: green; font-size: small;">ON</button>
+                    </th>
+                    <th></th>
+                    <th></th>
                 </tr>
             </table>
         </div>
